# ShoulderCupid

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  render.yaml  vercel.json
.github/workflows/: deploy-backend.yml
apps/backend/: package.json  tsconfig.json
apps/backend/src/: server.ts
apps/backend/src/config/: auth.ts  database.ts  imagePrompts.ts  loadEnv.ts  voicePool.ts
apps/backend/src/models/: Coach.ts  Payment.ts  Session.ts  User.ts
apps/backend/src/routes/: auth.ts  coaches.ts  gemini.ts  hardware.ts  payments.ts  sessions.ts  stt.ts  tts.ts  user.ts
apps/backend/src/scripts/: migrateToRoster.ts  seed.ts
apps/backend/src/services/: adviceService.ts  aiService.ts  analysisService.ts  coachGenerationService.ts  frameBuffer.ts  preferenceService.ts  presageMetrics.ts  presageService.ts  relationshipAdviceAgent.ts  reportService.ts  templateAdviceService.ts  templateAnalysisService.ts  templateCoachingService.ts  ttsService.ts
apps/backend/src/sockets/: clientHandler.ts  esp32Handler.ts  index.ts
apps/backend/src/utils/: resilience.ts
apps/frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
apps/frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/frontend/src/data/: coaches.ts  (+4 more)
apps/marketing/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/marketing/src/: App.tsx  index.css
docs/: DESIGN_SYSTEM.md  ESP32_CAM_QUICKTEST.md  ESP32_HARDWARE_GUIDE.md  GOOGLE_OAUTH_SETUP.md  MONGODB_ATLAS_SETUP.md  PLAN.md  PROGRESS.md  SOLANA_SETUP.md
docs/github-issues/: README.md  epic-1-foundation.md  epic-2-hardware-api.md  epic-3-ai-pipeline.md  epic-4-sessions.md  epic-5-frontend-core.md  epic-6-live-session.md  epic-7-onboarding.md  epic-8-landing-payment.md
scripts/: deploy-backend.sh  setup-presage.sh
services/presage-processor/: CMakeLists.txt  main.cpp
services/vitals-processor/: breathing.py  config.py  face_detector.py  main.py  requirements.txt  rppg.py
(+88 files in other folders)
